[workspace]

resolver = "2"

members = [
    "crates/*",
    "examples",
    "examples/util",
    "tests",
    "tests/macro-tests",
]
default-members = ["crates/*"]

[profile.dev]
debug = 1

[profile.release-lto]
inherits = "release"
lto = "thin"

[profile.prebuild]
inherits = "release-lto"

[workspace.metadata.zng-do]
# args used by `do doc` for all crates in the workspace.
rustdoc-args = [
    "--html-in-header",
    "target/doc/zng-material-icons-extensions.html",
    "--html-in-header",
    "crates/zng-app/doc/html-in-header.html",
]
