[workspace]

resolver = "2"

members = [
    "crates/*",
    "examples",
    "examples/util",
    "tests",
    "tests/macro-tests",
]
default-members = ["crates/*"]

[profile.dev]
debug = 1

[profile.release-lto]
inherits = "release"
lto = "thin"

[profile.prebuild]
inherits = "release-lto"

[workspace.metadata.zng-do]
# args used by `do doc` for all crates in the workspace.
rustdoc-args = [
    "--html-in-header",
    "target/doc/zng-material-icons-extensions.html",
    "--html-in-header",
    "crates/zng-app/doc/html-in-header.html",
]
# deadlink check does not run if any glob matches.
skip-deadlinks = [
    "**/struct.BidiLevel*",
    "**/*task/fs/struct.Dir*",
    "**/*task/fs/struct.File*",
    "**/*task/fs/fn.copy*",
    "**/*task/io/*.Async*",
    "**/*task/http/struct.Cookie*",
    "**/*fs_watcher/fs_event/*",
]
