[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
meval = "0.2"
tracing = "0.1"
lipsum = "0.8.0"

zero-ui = { path = "../zero-ui", features = ["test_util"] }
zero-ui-material-icons = { path = "../zero-ui-material-icons" }
zero-ui-view = { path = "../zero-ui-view" }
zero-ui-view-prebuilt = { path = "../zero-ui-view-prebuilt" }
examples-util = { path = "util" }

[[example]]
name = "animation"
path = "animation.rs"

[[example]]
name = "border"
path = "border.rs"

[[example]]
name = "button"
path = "button.rs"

[[example]]
name = "calculator"
path = "calculator.rs"

[[example]]
name = "countdown"
path = "countdown.rs"

[[example]]
name = "cursor"
path = "cursor.rs"

[[example]]
name = "focus"
path = "focus.rs"

[[example]]
name = "gradient"
path = "gradient.rs"

[[example]]
name = "headless"
path = "headless.rs"

[[example]]
name = "hit_test"
path = "hit_test.rs"

[[example]]
name = "icon"
path = "icon.rs"

[[example]]
name = "image"
path = "image.rs"

[[example]]
name = "layer"
path = "layer.rs"

[[example]]
name = "respawn"
path = "respawn.rs"

[[example]]
name = "scrollable"
path = "scrollable.rs"

[[example]]
name = "shortcuts"
path = "shortcuts.rs"

[[example]]
name = "text"
path = "text.rs"

[[example]]
name = "transform"
path = "transform.rs"

[[example]]
name = "window"
path = "window.rs"