[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
mexprp = { version = "0.3", default-features = false }
tracing = "0.1"
lipsum = "0.9.0"
rand = "0.8.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }

zero-ui = { path = "../zero-ui", features = [
    "http",
    "hyphenation_embed_all",
    "inspector",
    "deadlock_detection",
] }

zero-ui-view = { path = "../zero-ui-view" }
zero-ui-view-prebuilt = { path = "../zero-ui-view-prebuilt" }

zero-ui-app = { path = "../zero-ui-app" }           # for respawn and extend_view examples
zero-ui-view-api = { path = "../zero-ui-view-api" } # for and extend_view example

examples-util = { path = "util" }
# backtrace-on-stack-overflow = "0.2"

[[example]]
name = "animation"
path = "animation.rs"

[[example]]
name = "border"
path = "border.rs"

[[example]]
name = "button"
path = "button.rs"

[[example]]
name = "calculator"
path = "calculator.rs"

[[example]]
name = "config"
path = "config.rs"

[[example]]
name = "countdown"
path = "countdown.rs"

[[example]]
name = "cursor"
path = "cursor.rs"

[[example]]
name = "extend_view"
path = "extend_view.rs"

[[example]]
name = "focus"
path = "focus.rs"

[[example]]
name = "gradient"
path = "gradient.rs"

[[example]]
name = "headless"
path = "headless.rs"

[[example]]
name = "icon"
path = "icon.rs"

[[example]]
name = "image"
path = "image.rs"

[[example]]
name = "layer"
path = "layer.rs"

[[example]]
name = "localize"
path = "localize.rs"

[[example]]
name = "markdown"
path = "markdown.rs"

[[example]]
name = "respawn"
path = "respawn.rs"

[[example]]
name = "scroll"
path = "scroll.rs"

[[example]]
name = "shortcuts"
path = "shortcuts.rs"

[[example]]
name = "text"
path = "text.rs"

[[example]]
name = "transform"
path = "transform.rs"

[[example]]
name = "window"
path = "window.rs"
