[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
mexprp = { version = "0.3", default-features = false }
tracing = "0.1"
lipsum = "0.9.0"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
raw-window-handle = "0.6"
dunce = "1.0"
linkme = "0.3"

zng = { path = "../crates/zng", features = [
    "http",
    "hyphenation_embed_all",
    "inspector",
    "deadlock_detection",
    "material_icons",
    "view",
    "view_prebuilt",
    "hot_reload",
    # "multi_app",
] }

zng-app = { path = "../crates/zng-app" }                                 # for respawn and extend_view examples
zng-view-api = { path = "../crates/zng-view-api" }                       # for the extend_view example
zng-view = { path = "../crates/zng-view" }                               # for the extend_view example
zng-wgt-webrender-debug = { path = "../crates/zng-wgt-webrender-debug" } # for the extend_view example

examples-util = { path = "util" }
examples-hot-reload = { path = "hot-reload-lib" }

[[example]]
name = "animation"
path = "animation.rs"

[[example]]
name = "border"
path = "border.rs"

[[example]]
name = "button"
path = "button.rs"

[[example]]
name = "calculator"
path = "calculator.rs"

[[example]]
name = "config"
path = "config.rs"

[[example]]
name = "countdown"
path = "countdown.rs"

[[example]]
name = "cursor"
path = "cursor.rs"

[[example]]
name = "extend_view"
path = "extend_view.rs"

[[example]]
name = "focus"
path = "focus.rs"

[[example]]
name = "gradient"
path = "gradient.rs"

[[example]]
name = "headless"
path = "headless.rs"

[[example]]
name = "hot_reload"
path = "hot_reload.rs"

[[example]]
name = "icon"
path = "icon.rs"

[[example]]
name = "image"
path = "image.rs"

[[example]]
name = "layer"
path = "layer.rs"

[[example]]
name = "localize"
path = "localize.rs"

[[example]]
name = "markdown"
path = "markdown.rs"

[[example]]
name = "respawn"
path = "respawn.rs"

[[example]]
name = "scroll"
path = "scroll.rs"

[[example]]
name = "shortcut"
path = "shortcut.rs"

[[example]]
name = "text"
path = "text.rs"

[[example]]
name = "transform"
path = "transform.rs"

[[example]]
name = "window"
path = "window.rs"
