[package]
name = "integration-tests"
version = "0.0.0"
publish = false
edition = "2021"

[features]
default = ["ipc"]
ipc = ["zng/ipc"]

[dev-dependencies]
zng = { path = "../crates/zng", features = ["test_util", "toml", "ron", "yaml"] }
zng-view = { path = "../crates/zng-view" }
zng-wgt-webrender-debug = { path = "../crates/zng-wgt-webrender-debug" }
zng-app = { path = "../crates/zng-app" }
pretty_assertions = "1.4"
walkdir = "2.5"
dunce = "1.0"

[[test]]
name = "cargo_zng"
path = "cargo_zng.rs"

[[test]]
name = "command"
path = "command.rs"

[[test]]
name = "focus"
path = "focus.rs"

[[test]]
name = "image"
path = "image.rs"

[[test]]
name = "config"
path = "config.rs"

[[test]]
name = "text"
path = "text.rs"

[[test]]
name = "var"
path = "var.rs"
