[package]
name = "integration-tests"
version = "0.0.0"
publish = false
edition = "2024"

[features]
default = ["ipc"]
ipc = ["zng/ipc"]

[dev-dependencies]
zng = { path = "../crates/zng", features = ["test_util", "config_all"] }
zng-view = { path = "../crates/zng-view" }
zng-wgt-webrender-debug = { path = "../crates/zng-wgt-webrender-debug" }
zng-app = { path = "../crates/zng-app" }
pretty_assertions = "1.4"
walkdir = "2.5"
dunce = "1.0"
# to enable tracing see the examples/countdown crate
# tracing = "0.1"
# tracing-chrome = "0.7"
# tracing-subscriber = "0.3"

[[test]]
name = "cargo_zng"
path = "cargo_zng.rs"

[[test]]
name = "command"
path = "command.rs"

[[test]]
name = "focus"
path = "focus.rs"

[[test]]
name = "image"
path = "image.rs"

[[test]]
name = "config"
path = "config.rs"

[[test]]
name = "misc"
path = "misc.rs"

[[test]]
name = "var"
path = "var.rs"
