[package]
name = "zero-ui-docs"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
# default = ["post"]

# Static pos-processing.
post = ["lol_html", "glob", "rayon", "regex", "pathdiff"]

[dependencies]
lol_html = { version = "0.3", optional = true }
glob = { version = "0.3", optional = true }
rayon = { version = "1", optional = true }
regex = { version = "1", optional = true }
pathdiff = { version = "0.2", optional = true }

[build-dependencies]
minifier = "0.0.43"