[package]
name = "zero-ui-ext-config"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../zero-ui-app/README.md"

[features]
default = ["toml", "ron", "yaml"]

yaml = ["dep:serde_yaml", "zero-ui-ext-fs_watcher/yaml"]
toml = ["dep:toml", "zero-ui-ext-fs_watcher/toml"]
ron = ["dep:ron", "zero-ui-ext-fs_watcher/ron"]

[dependencies]
zero-ui-app_context = { path = "../zero-ui-app_context" }
zero-ui-app = { path = "../zero-ui-app" }
zero-ui-var = { path = "../zero-ui-var" }
zero-ui-txt = { path = "../zero-ui-txt" }
zero-ui-task = { path = "../zero-ui-task" }
zero-ui-clone_move = { path = "../zero-ui-clone_move" }
zero-ui-unique_id = { path = "../zero-ui-unique_id" }
zero-ui-ext-fs_watcher = { path = "../zero-ui-ext-fs_watcher", features = [
    "json",
] }

tracing = "0.1"
bytemuck = "1"
indexmap = "2"
atomic = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", optional = true, features = ["preserve_order"] }
ron = { version = "0.8", optional = true, features = ["indexmap"] }
serde_yaml = { version = "0.9", optional = true }
