[package]
name = "zero-ui-ext-font"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
test_util = ["zero-ui-app/test_util"]

[dependencies]
zero-ui-clone_move = { path = "../zero-ui-clone_move" }
zero-ui-app_context = { path = "../zero-ui-app_context" }
zero-ui-app = { path = "../zero-ui-app" }
zero-ui-txt = { path = "../zero-ui-txt" }
zero-ui-view-api = { path = "../zero-ui-view-api" }
zero-ui-ext-l10n = { path = "../zero-ui-ext-l10n" }
zero-ui-var = { path = "../zero-ui-var" }
zero-ui-task = { path = "../zero-ui-task" }
zero-ui-layout = { path = "../zero-ui-layout" }
zero-ui-color = { path = "../zero-ui-color" }

serde = "1"
unicase = "2"
font-kit = "0.12"
harfbuzz_rs = "2"
parking_lot = "0.12"
byteorder = "1"
icu_properties = "1"
bitflags = "2"
tracing = "0.1"
paste = "1"
num_enum = "0.7"
hyphenation = "0.8"
regex = "1"
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-segmentation = "1"
unic-langid = "0.9"
smallvec = { version = "1", features = ["const_new", "serde"] }
hashbrown = "0.14"
pathfinder_geometry = "0.5"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "zero-ui-ext-font/doc/html-in-header.html" ]