[package]
name = "zero-ui-ext-fs_watcher"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
zero-ui-app_context = { path = "../zero-ui-app_context" }
zero-ui-app = { path = "../zero-ui-app" }
zero-ui-clone_move = { path = "../zero-ui-clone_move" }
zero-ui-var = { path = "../zero-ui-var" }
zero-ui-txt = { path = "../zero-ui-txt" }
zero-ui-units = { path = "../zero-ui-units" }
zero-ui-handle = { path = "../zero-ui-handle" }
zero-ui-task = { path = "../zero-ui-task" }

walkdir = "2"
serde = "1"
tracing = "0.1"
fs4 = "0.7"
glob = "0.3"
notify = "6"
path-absolutize = "3"
atomic = "0.6"
parking_lot = "0.12"
flume = "0.11"

serde_json = { version = "1", optional = true }
toml = { version = "0.8", optional = true, features = ["preserve_order"] }
ron = { version = "0.8", optional = true, features = ["indexmap"] }
serde_yaml = { version = "0.9", optional = true }