[package]
name = "zero-ui-ext-image"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
http = ["zero-ui-task/http"]

[dependencies]
zero-ui-app_context = { path = "../zero-ui-app_context" }
zero-ui-unique_id = { path = "../zero-ui-unique_id" }
zero-ui-clone_move = { path = "../zero-ui-clone_move" }
zero-ui-app = { path = "../zero-ui-app" }
zero-ui-view-api = { path = "../zero-ui-view-api" }
zero-ui-txt = { path = "../zero-ui-txt" }
zero-ui-var = { path = "../zero-ui-var" }
zero-ui-task = { path = "../zero-ui-task" }
zero-ui-layout = { path = "../zero-ui-layout" }
zero-ui-color = { path = "../zero-ui-color" }
zero-ui-state_map = { path = "../zero-ui-state_map" }

serde = "1"
once_cell = "1"
parking_lot = "0.12"
tracing = "0.1"
base64 = "0.21"
sha2 = "0.10"