[package]
name = "zero-ui-ext-l10n-proc-macros"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits", "derive"] }
quote = "1"

fluent-syntax = "0.11"
unic-langid = "0.9"