[package]
name = "zero-ui-ext-undo"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../zero-ui-app/README.md"

[dependencies]
zero-ui-clone_move = { path = "../zero-ui-clone_move" }
zero-ui-app_context = { path = "../zero-ui-app_context" }
zero-ui-app = { path = "../zero-ui-app" }
zero-ui-var = { path = "../zero-ui-var" }
zero-ui-txt = { path = "../zero-ui-txt" }
zero-ui-state_map = { path = "../zero-ui-state_map" }
zero-ui-ext-input = { path = "../zero-ui-ext-input" }

atomic = "0.6"
parking_lot = "0.12"