[package]
name = "zero-ui-layout"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
zero-ui-units = { path = "../zero-ui-units" }
zero-ui-var = { path = "../zero-ui-var" }
zero-ui-app_context = { path = "../zero-ui-app_context" }

serde = { version = "1", features = ["derive"] }
bitflags = "2"
bytemuck = "1"
tracing = "0.1"
atomic = "0.6"