[package]
name = "zero-ui-macros"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.9"
syn = { version = "1.0.16", features = ["full", "visit-mut", "extra-traits"] }
quote = "1.0.2"

proc-macro-hack = "0.5.14"
proc-macro-crate = "0.1.4"