[package]
name = "zero-ui-material-icons"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["embedded", "outlined", "filled", "rounded", "sharp", "two_tone"]

# Embedded font files.
embedded = []

# Outlined icon set.
outlined = []

# Filled icon set.
filled = []

# Rounded icon set.
rounded = []

# Sharp icon set.
sharp = []

# Two-tone icon set.
two_tone = []

[dependencies]
zero-ui= { path = "../zero-ui" }
