[package]
name = "zero-ui-proc-macros"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
# 1.0.84 introduced `parse_quote_spanned!`
# 1.0.98 moved `parse_braces`
syn = { version = "^1.0.98", features = ["full", "visit-mut", "extra-traits", "derive"] }
quote = "1"

sha2 = "0.10"
once_cell = "1"
unic-langid = "0.9"