[package]
name = "zero-ui-proc-macros"
version = "0.1.0"
authors = ["Samuel Guerra <sam.rodr.g@gmail.com>", "Well <well-r@hotmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits", "derive"] }
quote = "1"
lazy_static = "1"

once_cell = "1"
unic-langid = "0.9"

minifier = "0.2"